Replace newInstance() with getDeclaredConstructor().newInstance() (#12094)
* Replace newInstance() with getDeclaredConstructor().newInstance()

* Format code